# image_processor

./: CMakeLists.txt  README.md  image_processor.cpp  install.sh  uninstall.sh
includes/bmp/: bmp.h
includes/exceptions/: base_exception.h  exceptions.h  tester.h
includes/filters/: aging.h  barrel.h  base.h  blur.h  crop.h  edge.h  filter.h  grayscale.h  negative.h  poster.h  sepia.h  sharpening.h
includes/io/: io.h  parser.h  runner.h
includes/matrix/: matrix_tools.h
includes/util/: utils.h
src/: CMakeLists.txt
src/bmp/: bmp.cpp
src/exceptions/: tester.cpp
src/filters/: aging.cpp  barrel.cpp  blur.cpp  crop.cpp  edge.cpp  filter.cpp  grayscale.cpp  negative.cpp  poster.cpp  sepia.cpp  sharpening.cpp
src/io/: io.cpp  parser.cpp  runner.cpp
src/matrix/: matrix_tools.cpp
src/util/: utils.cpp
